--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ python-multipart==0.0.6
 pydantic==2.5.0
 python-dotenv==1.0.0
 openai==0.28.1
+soundfile==0.12.1
+librosa==0.10.1
+numpy==1.24.3
+scipy==1.10.1
