--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
 python-dotenv==1.0.0
-openai==0.28.1
+openai>=1.0.0
 soundfile==0.12.1
 librosa==0.10.1
 numpy==1.24.3
